Port from JNA to FFM